--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "author": "Alex Kim",
-  "description": "Register more efficiently on The Hub with ratings from RateMyProfessors.com",
+  "description": "Reviews from RateMyProfessors.com On The Hub & Enroll",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
@@ -17,8 +17,9 @@
     "scripts": ["src/bg/background.js"],
     "persistent": false
   },
-  "page_action": {
-    "default_icon": "icons/icon19.png"
+  "browser_action": {
+    "default_icon": "icons/icon19.png",
+    "default_popup": "src/popup.html"
   },
   "content_scripts": [
     {
