--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "manifest_version": 2,
   "author": "Alex Kim",
-  "description": "Reviews from RateMyProfessors.com On The Hub & Enroll",
+  "description": "Reviews from RateMyProfessors.com On The Hub & ENROLL",
   "icons": {
     "16": "icons/icon16.png",
     "48": "icons/icon48.png",
